# NYS-Design-Optimisation-using-PySAM

./: .gitignore  Kanniyan_Project.json  README_copy.md  Readme.md  bread_scraper_quick_commerce.py  config.py  convert.py  demand_data.py  job.pbs  main.py  notes.txt  pyproject.toml  requirements.txt  router.py
checkpoints/: checkpoint_gen_0.pkl  checkpoint_latest.pkl
downloaded_run_artifacts/: config.py
electricity_data/: Yearly_Demand_Profile.xlsx  Yearly_Demand_Profile_state_mahrastra_and_manipur.xlsx  dynamic_price_data
excel_file/: 28.428_77.159_28.428_77.159_1_Hour_2020.csv  only for the jan.sam
experiments/: sim_run.py
objective_functions/: __init__.py  constraints.m  obj_function.m  objective_func.py
optimisation/: __init__.py  deap_ga_optimiser.py  deap_ga_parallel.py  fmincon_optimiser.py  ga_optimiser.py  matlab_ga_optimiser.py  nlopt_fmincon.py  optimiser.py  pygad_ga_optimiser.py  rl_optimiser.py  scipy_fmincon.py
prefect-results/: sim_16047af87ba90fdf7e1d9166845553da19d2d48ca9ff783e088139479b69a075  sim_1df46ba6eb1f06f152912ad8a7cc8a6546e0a6c72d1b0b9a5e7cd17d637580c9  sim_301566ff465bb5c4afb2dbaa47702bc13e45bed66f5807a717835fd3e157dabb  sim_7526847dd1a0d611b3d944b92beee2bed4e44e6f5c2833b3db4fc768ae505a85  sim_7b2daa7ff6165ebfdbb3ec86ec4aaf4c7390e585eee2eadb27952adb27ac6de2  sim_8ed225e471e3270965279e42b04e476fe6a62b2f4f67cfc82677332e8af8216f  sim_9c0a61ecedb970e3e0c42bf470ad75b7e1827a200bb5e10396805e6b0b8f5c94  sim_9d118515d579457f6b81f16c9ea8311f1e4f31fdc461badda50aa5842cad310f  sim_a154e83dedc29d9b37293f37f5ef4b670bd101ae5f6affe3c4f2d54690f108bf  (+8 more)
results/: result_1.csv
(+36 files in other folders)
